--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.0.13",
+    "aos": "^2.3.4",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-masonry-css": "^1.0.16",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scroll": "^1.9.3",
+    "react-swipeable": "^7.0.2",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.13"
   },
